Implement enter handler for text area

--- a/client/static/index.html
+++ b/client/static/index.html
@@ -31,7 +31,7 @@
             </div>
             <div class="row vertical-align" id="chat-input-row">
                 <div class="col-lg-10" id="textarea-col">
-                    <textarea id="send-message-txtarea" class="form-control" placeholder="Enter your message and hit Send!" rows="2" cols="65"></textarea>
+                    <textarea id="send-message-txtarea" class="form-control" placeholder="Type your message and hit Enter!" rows="2" cols="65"></textarea>
                 </div>
                 <div class="col-lg-2">
                     <button id="send-msg-btn" type="submit" class="btn btn-default btn-lg btn-block pull-right" onclick="onClickMessageSend()">Send</button>
