--- a/client/static/index.html
+++ b/client/static/index.html
@@ -22,7 +22,7 @@
         </div>
     </div>
     <div class="row">
-        <div id="chat-box" class="col-lg-8">
+        <div id="chat-box" class="col-lg-6">
             <div class="row" id="chat-history-row">
                 <div class="panel panel-default">
                     <div class="panel-heading">Chat history</div>
@@ -38,26 +38,67 @@
                 </div>
             </div>
         </div>
-        <div id="node-box" class="col-lg-4">
+        <div id="nodes-box" class="col-lg-3">
+            <div class="row">
+                <div class="panel panel-default">
+                    <div class="panel-heading">Known Nodes</div>
+                    <div class="panel-body">
+                        <div id="known-nodes-list" class="list-group">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div>
+                    <button id="private-msg-btn" type="button" class="btn btn-default btn-lg btn-block" disabled data-toggle="modal" data-target="#pm-modal">Private Message</button>
+                </div>
+            </div>
+        </div>
+        <div id="peers-box" class="col-lg-3">
             <div class="row">
                 <div class="panel panel-default">
                     <div class="panel-heading">Peer Nodes</div>
                     <div class="panel-body">
-                        <ul id="nodes-list" class="list-group">
+                        <ul id="peers-list" class="list-group">
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="row" id="node-input-row">
-                <div class="col-lg-10" id="textarea-col">
-                    <input id="send-node-txt" type="text" class="form-control" placeholder="Enter peer address in the form <ip:port> and hit Add!">
+                <div class="col-lg-8" id="textarea-col">
+                    <input id="send-node-txt" type="text" class="form-control" placeholder="Enter peer address <ip:port>">
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-4">
                     <button id="send-msg-btn" type="submit" class="btn btn-default btn-md btn-block pull-right" onclick="onClickNodeSend()">Add</button>
                 </div>
             </div>
         </div>
     </div>
+    <div class="modal fade" id="pm-modal" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Private Message</h4>
+                </div>
+                <div class="modal-body">
+                    <row>
+                        <div class="row vertical-align" id="chat-input-row">
+                            <div class="col-lg-9" id="textarea-col">
+                                <textarea id="send-pm-txtarea" class="form-control" placeholder="Type your private message and hit Enter!" rows="2" cols="65"></textarea>
+                            </div>
+                            <div class="col-lg-3">
+                                <button id="send-pm-btn" type="submit" class="btn btn-default btn-lg btn-block pull-right" onclick="onClickPMSend()">Send</button>
+                            </div>
+                        </div>
+                    </row>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 
