--- a/client/static/index.html
+++ b/client/static/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <link rel="stylesheet" href="lib/css/bootstrap.min.css">
+    <link rel="stylesheet" href="lib/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="style.css">
 
     <title>Peerster Client</title>
@@ -17,12 +17,12 @@
         <div id="id-box" class="col">
             <div class="well" id="id-box-well">
                 Node ID:
-                <b id="id-placeholder"></b>
+                <b id="id-placeholder"/>
             </div>
         </div>
     </div>
     <div class="row">
-        <div id="chat-box" class="col-lg-8">
+        <div id="chat-box" class="col-lg-6">
             <div class="row" id="chat-history-row">
                 <div class="panel panel-default">
                     <div class="panel-heading">Chat history</div>
@@ -34,36 +34,77 @@
                     <textarea id="send-message-txtarea" class="form-control" placeholder="Type your message and hit Enter!" rows="2" cols="65"></textarea>
                 </div>
                 <div class="col-lg-2">
-                    <button id="send-msg-btn" type="submit" class="btn btn-default btn-lg btn-block pull-right" onclick="onClickMessageSend()">Send</button>
+                    <button id="send-msg-btn" type="submit" class="btn btn-default btn-lg btn-block pull-right" onclick="onClickGossipMessageSend()">Send</button>
                 </div>
             </div>
         </div>
-        <div id="node-box" class="col-lg-4">
+        <div id="nodes-box" class="col-lg-3">
+            <div class="row">
+                <div class="panel panel-default">
+                    <div class="panel-heading">Known Nodes</div>
+                    <div class="panel-body">
+                        <div id="known-nodes-list" class="list-group">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div>
+                    <button id="private-msg-btn" type="button" class="btn btn-default btn-lg btn-block" disabled data-toggle="modal" data-target="#pm-modal">Private Message</button>
+                </div>
+            </div>
+        </div>
+        <div id="peers-box" class="col-lg-3">
             <div class="row">
                 <div class="panel panel-default">
                     <div class="panel-heading">Peer Nodes</div>
                     <div class="panel-body">
-                        <ul id="nodes-list" class="list-group">
+                        <ul id="peers-list" class="list-group">
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="row" id="node-input-row">
-                <div class="col-lg-10" id="textarea-col">
-                    <input id="send-node-txt" type="text" class="form-control" placeholder="Enter peer address in the form <ip:port> and hit Add!">
+                <div class="col-lg-8" id="textarea-col">
+                    <input id="send-node-txt" type="text" class="form-control" placeholder="Enter peer address <ip:port>">
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-4">
                     <button id="send-msg-btn" type="submit" class="btn btn-default btn-md btn-block pull-right" onclick="onClickNodeSend()">Add</button>
                 </div>
             </div>
         </div>
     </div>
+    <div class="modal fade" id="pm-modal" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Private Message</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="row vertical-align" id="chat-input-row">
+                            <div class="col-lg-9" id="textarea-col">
+                                <textarea id="send-pm-txtarea" class="form-control" placeholder="Type your private message and hit Enter!" rows="2" cols="65"></textarea>
+                            </div>
+                            <div class="col-lg-3">
+                                <button id="send-pm-btn" type="submit" class="btn btn-default btn-lg btn-block pull-right" onclick="onClickPrivateMessageSend()">Send</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.11/lodash.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script type="text/javascript" src="lib/js/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="lib/js/lodash.js"></script>
+<script type="text/javascript"  src="lib/js/bootstrap.min.js"></script>
 <script src="index.js"></script>
 </body>
 </html>
