--- a/client/static/index.html
+++ b/client/static/index.html
@@ -22,14 +22,14 @@
         </div>
     </div>
     <div class="row">
-        <div id="chat-box" class="col-lg-6">
+        <div id="chat-box" class="col-lg-5">
             <div class="row" id="chat-history-row">
                 <div class="panel panel-default">
                     <div class="panel-heading">Chat history</div>
                     <div id="chat-msgs-list" class="panel-body"></div>
                 </div>
             </div>
-            <div class="row vertical-align" id="chat-input-row">
+            <div class="row vertical-align">
                 <div class="col-lg-10" id="textarea-col">
                     <textarea id="send-message-txtarea" class="form-control" placeholder="Type your message and hit Enter!" rows="2" cols="65"></textarea>
                 </div>
@@ -38,7 +38,19 @@
                 </div>
             </div>
         </div>
-        <div id="nodes-box" class="col-lg-3">
+        <div id="file-box" class="col-lg-2">
+            <div class="row">
+                <div class="panel panel-default">
+                    <div class="panel-heading">Index File</div>
+                    <div class="panel-body">
+                        <input type="file" class="form-control-file" id="file-input">
+                        <button id="index-file-btn" type="submit" class="btn btn-default btn-md btn-block" disabled onclick="onClickIndexFileSend()">Index File</button>
+                        <div id="file-index-status"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="nodes-box" class="col-lg-2">
             <div class="row">
                 <div class="panel panel-default">
                     <div class="panel-heading">Known Nodes</div>
@@ -51,6 +63,8 @@
             <div class="row">
                 <div>
                     <button id="private-msg-btn" type="button" class="btn btn-default btn-lg btn-block" disabled data-toggle="modal" data-target="#pm-modal">Private Message</button>
+                    <button id="file-download-btn" type="button" class="btn btn-default btn-lg btn-block" disabled data-toggle="modal" data-target="#file-modal">Download File</button>
+                    <div id="file-download-status"></div>
                 </div>
             </div>
         </div>
@@ -76,8 +90,6 @@
     </div>
     <div class="modal fade" id="pm-modal" role="dialog">
         <div class="modal-dialog">
-
-            <!-- Modal content-->
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -85,7 +97,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="row">
-                        <div class="row vertical-align" id="chat-input-row">
+                        <div class="row vertical-align" id="pm-input-row">
                             <div class="col-lg-9" id="textarea-col">
                                 <textarea id="send-pm-txtarea" class="form-control" placeholder="Type your private message and hit Enter!" rows="2" cols="65"></textarea>
                             </div>
@@ -99,6 +111,33 @@
         </div>
     </div>
 
+    <div class="modal fade" id="file-modal" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Download File</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="row vertical-align" id="download-form-row">
+                            <form>
+                                <div class="form-group">
+                                    <label for="file-hash-txt">File metahash</label>
+                                    <input id="file-hash-txt" type="text" class="form-control" placeholder="Enter file metahash">
+                                </div>
+                                <div class="form-group">
+                                    <label for="file-name-tx">Save as...</label>
+                                    <input id="file-name-txt" type="text" class="form-control" placeholder="Enter name to save file as">
+                                </div>
+                                <button id="trigger-download-btn" class="btn btn-default btn-lg btn-block pull-right" onclick="onClickTriggerDownload()">Download</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 
