test script and minor fixes

--- a/client/static/index.html
+++ b/client/static/index.html
@@ -41,10 +41,10 @@
         <div id="file-box" class="col-lg-2">
             <div class="row">
                 <div class="panel panel-default">
-                    <div class="panel-heading">Index File</div>
+                    <div class="panel-heading">Share File</div>
                     <div class="panel-body">
                         <input type="file" class="form-control-file" id="file-input">
-                        <button id="index-file-btn" type="submit" class="btn btn-default btn-md btn-block" disabled onclick="onClickIndexFileSend()">Index File</button>
+                        <button id="index-file-btn" type="submit" class="btn btn-default btn-md btn-block" disabled onclick="onClickIndexFileSend()">Share File</button>
                         <div id="file-index-status"></div>
                     </div>
                 </div>
