Transcode audio files when sharing and be able to reproduce them on the UI

--- a/client/static/index.html
+++ b/client/static/index.html
@@ -63,6 +63,10 @@
                 <div id="search-results-list" class="list-group">
                 </div>
             </div>
+            <div id="player-container" class="row">
+                <div id="player-description"> Now Playing: <span id="player-name"></span></div>
+                <audio id="audio-player" controls></audio>
+            </div>
         </div>
         <div id="nodes-box" class="col-lg-2">
             <div class="row">
